--- a/cpan/trunk/Changes
+++ b/cpan/trunk/Changes
@@ -1,5 +1,8 @@
 $Id$
 $URL$
 
+0.2 2005-04-12
+  This Module produce some useful results for a small set of methods.
+
 0.1 2005-01-11
   Initial Release on Subversion Repository.
