Fix: Error-Handling at Teamspeak::Telnet.
* lib/Teamspeak.pm
  Just changing $VERSION.
* lib/Teamspeak/Channel.pm
  Just changing $VERSION.
* lib/Teamspeak/Telnet.pm
  Teamspeak::Telnet.pm is setting err and errmsg.
  Better using of Net::Telnet.
* lib/Teamspeak/Player.pm
  Just changing $VERSION.
* lib/Teamspeak/Web.pm
  Just changing $VERSION.
* lib/Teamspeak/SQL.pm
  Just changing $VERSION.
* Changes
  Adding Comment to Version 0.3.
* README
  Just changing $VERSION.

--- a/cpan/trunk/Changes
+++ b/cpan/trunk/Changes
@@ -1,6 +1,10 @@
 $Id$
 $URL$
 
+0.3 2005-04-17
+  Teamspeak::Telnet.pm is setting err and errmsg and is using Net::Telnet
+  more correct.
+
 0.2 2005-04-12
   This Module produce some useful results for a small set of methods.
 
