We can't use SQLite3. New Objects Teamspeak::Ban and Teamspeak::Privileges.
M    t/06sqlch.t
M    t/03sl.t
M    t/04sql.t
M    t/07web.t
M    t/05sqlite.t
A    t/08cl.t
M    t/server.dbs
M    t/02connect.t
M    lib/Teamspeak.pm
M    lib/Teamspeak/Channel.pm
AM   lib/Teamspeak/Privileges.pm
M    lib/Teamspeak/Telnet.pm
M    lib/Teamspeak/Player.pm
M    lib/Teamspeak/Web.pm
M    lib/Teamspeak/SQL.pm
AM   lib/Teamspeak/Ban.pm
M    MANIFEST
A    META.yml
M    Changes
M    README

--- a/cpan/trunk/Changes
+++ b/cpan/trunk/Changes
@@ -1,6 +1,9 @@
 $Id$
 $URL$
 
+0.4 2006-05-20
+  New Objects Ban and Privileges for different Handles.
+
 0.3 2005-04-17
   Teamspeak::Telnet.pm is setting err and errmsg and is using Net::Telnet
   more correct.
